--- a/Views/Home.ejs
+++ b/Views/Home.ejs
@@ -16,40 +16,41 @@
     <link rel="stylesheet" href="/stylesheets/home.css">
 </head>
 
-<body <div class="nav_bar">
-    <header class="d-flex align-items-center py-3 bg-light header">
-        <div class="container">
-            <nav class="navbar-expand-lg " action="/" method="post">
-                <div id="navbarNav">
-                    <ul class="nav justify-content-center">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Logo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Buy a Firearm</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Sell a Firearm</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Value my Firearm</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Get Your compentency</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="/userProf">User Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/register"><button type="button" class="btn btn-danger" href="/login">Login or
-                                    Sign
-                                    up</button></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
+<body>
+    <div class="nav_bar">
+        <header class="d-flex align-items-center py-3 bg-light header">
+            <div class="container">
+                <nav class="navbar-expand-lg " action="/" method="post">
+                    <div id="navbarNav">
+                        <ul class="nav justify-content-center">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/">Logo</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Buy a Firearm</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Sell a Firearm</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " href="#">Value my Firearm</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " href="#">Get Your compentency</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " href="/userProf">User Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/register"><button type="button" class="btn btn-danger" href="/login">Login or
+                                        Sign
+                                        up</button></a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
     </div>
     <div>
         <div class="header_img">
