--- a/Views/buy.ejs
+++ b/Views/buy.ejs
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <div action="/userProf" method="post">
-        <h1>Welcome user </h1>
-        <a href="logout">Log out</a>
-    </div>
+    <h1>Buy</h1>
 </body>
 
 </html>
