--- a/Views/Register.ejs
+++ b/Views/Register.ejs
@@ -16,36 +16,41 @@
 
 <body>
 
-    <section class="header">
-        <div class="container-fluid">
-            <div id="navbarNav">
-                <ul class="nav justify-content-center">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Logo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Buy a Firearm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sell a Firearm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">Value my Firearm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">Get Your compentency</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="/userProf">User Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/login"><button type="button" class="btn btn-danger" href="/login">Login or
-                                Sign
-                                up</button></a>
-                    </li>
-                </ul>
+    <div class="nav_bar">
+        <header class="d-flex align-items-center py-3 bg-light header">
+            <div class="container">
+                <nav class="navbar-expand-lg " action="/" method="post">
+                    <div id="navbarNav">
+                        <ul class="nav justify-content-center">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/">Logo</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/buy">Buy a Firearm</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Sell a Firearm</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " href="#">Value my Firearm</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " href="#">Get Your compentency</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " href="/userProf">User Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/register"><button type="button" class="btn btn-danger" href="/login">Login or
+                                        Sign
+                                        up</button></a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-    </section>
+        </header>
+    </div>
     <% if(typeof alert !='undefined' ){%>
         <% alert.forEach(function(error){%>
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
