--- a/Views/shotgun.ejs
+++ b/Views/shotgun.ejs
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/buy.css">
+    <link rel="stylesheet" href="/stylesheets/shotgun.css">
     <title>Document</title>
 </head>
 
@@ -19,7 +19,7 @@
     <div class="nav_bar">
         <header class="d-flex align-items-center py-3 bg-light header">
             <div class="container">
-                <nav class="navbar-expand-lg " action="/" method="post">
+                <nav class="navbar-expand-lg " action="/shotgun" method="post">
                     <div id="navbarNav">
                         <ul class="nav justify-content-center">
                             <li class="nav-item">
@@ -80,42 +80,40 @@
                         </div>
                     </form>
                 </div>
-            </div>
-        </div>
-        <div class="dropdown-header">
-            <div class="mb-3">
-                <div class="Variant">
-                    <input type="text" name="Model" placeholder="Search Make, Model and Variant" class="form-control"
-                        id="exampleInputPassword1">
+                <div class="dropdown-header">
+                    <div class="mb-3">
+                        <div class="Variant">
+                            <input type="text" name="Model" placeholder="Search Make, Model and Variant"
+                                class="form-control" id="exampleInputPassword1">
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="min">
+                            <input type="text" name="minPrice" placeholder="Min Price" class="form-control"
+                                id="exampleInputPassword1">
+                        </div>
+                    </div>
+                    <div class="max">
+                        <input type="text" name="minPrice" placeholder="Max Price" class="form-control"
+                            id="exampleInputPassword1">
+                    </div>
+                    <div class="model">
+                        <input type="text" name="model" placeholder="Make & Model" class="form-control"
+                            id="exampleInputPassword1">
+                    </div>
+                </div>
+                <div class="searchFire">
+                    <button style="background: #B61E10FF; border: 0;">Search</button>
                 </div>
             </div>
-            <div class="col-4">
-                <div class="min">
-                    <input type="text" name="minPrice" placeholder="Min Price" class="form-control"
-                        id="exampleInputPassword1">
-                </div>
-            </div>
-            <div class="max">
-                <input type="text" name="minPrice" placeholder="Max Price" class="form-control"
-                    id="exampleInputPassword1">
-            </div>
-            <div class="model">
-                <input type="text" name="model" placeholder="Make & Model" class="form-control"
-                    id="exampleInputPassword1">
+            </form>
+            <br>
+            <div class="link">
             </div>
         </div>
-        <div class="searchFire">
-            <button style="background: #B61E10FF; border: 0;">Search</button>
-        </div>
-    </div>
-    </form>
-    <br>
-    <div class="link">
-    </div>
-    </div>
     </div>
     <div class="new">
-        <h1>New & Used Handguns For Sale</h1>
+        <h1>New & Used Shotgun's For Sale</h1>
     </div>
     <div class="handgun-home">
         <h6>Home</h6>
