--- a/Views/semi.ejs
+++ b/Views/semi.ejs
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/buy.css">
+    <link rel="stylesheet" href="/stylesheets/semi.css">
     <title>Document</title>
 </head>
 
@@ -19,7 +19,7 @@
     <div class="nav_bar">
         <header class="d-flex align-items-center py-3 bg-light header">
             <div class="container">
-                <nav class="navbar-expand-lg " action="/" method="post">
+                <nav class="navbar-expand-lg " action="/semi" method="post">
                     <div id="navbarNav">
                         <ul class="nav justify-content-center">
                             <li class="nav-item">
@@ -58,28 +58,26 @@
     <div class=" box">
         <div class="heading">
             <div class="container text-center">
-                <div class="row align-items-start">
-                    <form action="/buy">
-                        <div class="col">
-                            <button type="submit" class="Handguns" value="Handguns">Handguns</button>
-                        </div>
-                    </form>
-                    <form action="/rifle">
-                        <div class="col">
-                            <button type="submit" class="Hunting" value="Hunting Rifle">Hunting Rifle</button>
-                        </div>
-                    </form>
-                    <form action="/shotgun">
-                        <div class="col">
-                            <button type="submit" class="Shotguns" value="Shotguns">Shotgun</button>
-                        </div>
-                    </form>
-                    <form action="/semi">
-                        <div class="col">
-                            <button type="submit" class="Semi" value="Semi-Automatic">Semi-Automatic</button>
-                        </div>
-                    </form>
-                </div>
+                <form action="/buy">
+                    <div class="col">
+                        <button type="submit" class="Handguns" value="Handguns">Handguns</button>
+                    </div>
+                </form>
+                <form action="/rifle">
+                    <div class="col">
+                        <button type="submit" class="Hunting" value="Hunting Rifle">Hunting Rifle</button>
+                    </div>
+                </form>
+                <form action="/shotgun">
+                    <div class="col">
+                        <button type="submit" class="Shotguns" value="Shotguns">Shotgun</button>
+                    </div>
+                </form>
+                <form action="/semi">
+                    <div class="col">
+                        <button type="submit" class="Semi" value="Semi-Automatic">Semi-Automatic</button>
+                    </div>
+                </form>
             </div>
         </div>
         <div class="dropdown-header">
@@ -115,7 +113,7 @@
     </div>
     </div>
     <div class="new">
-        <h1>New & Used Handguns For Sale</h1>
+        <h1>New & Used Semi-Automatic's For Sale</h1>
     </div>
     <div class="handgun-home">
         <h6>Home</h6>
