--- a/public/stylesheets/Login.css
+++ b/public/stylesheets/Login.css
@@ -1,13 +1,14 @@
 body {
     background-image: url("/Assets/Image 20 (2).png");
     background-position: center;
-    background-size: cover;
     background-repeat: no-repeat;
-    top: 48px;
+    background-size: cover;
     left: 0px;
     width: 100%;
     height: 858px;
     /* neutral-800 */
+    margin: 0;
+    width: 100%;
     border-radius: 0px;
 }
 
@@ -217,13 +218,7 @@ li a:hover {
 }
 
 .header {
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 48px;
-    background: #1E2128FF;
-    /* neutral-800 */
-    border-radius: 0px;
+    background-color: black !important;
 }
 
 .text-size {
