--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -31,7 +31,7 @@
                                 <a class="nav-link" href="/buy">Buy a Firearm</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sell a Firearm</a>
+                                <a class="nav-link" href="/sell">Sell a Firearm</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link " href="#">Value my Firearm</a>
@@ -43,7 +43,7 @@
                                 <a class="nav-link " href="/userProf">User Profile</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/register"><button type="button" class="btn btn-danger" href="/login">Login or
+                                <a href="/buysell"><button type="button" class="btn btn-danger" href="/login">Login or
                                         Sign
                                         up</button></a>
                             </li>
