--- a/Views/buysell.ejs
+++ b/Views/buysell.ejs
@@ -4,19 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/buy.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/buyandsell.css">
 </head>
 
 <body>
-    <div class="nav_bar">
+    <div class="nav_bar" action="/buysell">
         <header class="d-flex align-items-center py-3 bg-light header">
             <div class="container">
                 <nav class="navbar-expand-lg " action="/" method="post">
@@ -52,128 +51,26 @@
         </header>
     </div>
     </div>
-    <div class="header-img">
-        <img src="\Assets\Image 25 (1).png" class="img-fluid" alt="...">
-    </div>
-    <div class=" box">
-        <div class="heading">
-            <div class="container text-center">
-                <div class="row align-items-start">
-                    <form action="/buy">
-                        <div class="col">
-                            <button type="submit" class="Handguns" value="Handguns">Handguns</button>
-                        </div>
-                    </form>
-                    <form action="/rifle">
-                        <div class="col">
-                            <button type="submit" class="Hunting" value="Hunting Rifle">Hunting Rifle</button>
-                        </div>
-                    </form>
-                    <form action="/shotgun">
-                        <div class="col">
-                            <button type="submit" class="Shotguns" value="Shotguns">Shotgun</button>
-                        </div>
-                    </form>
-                    <form action="/semi">
-                        <div class="col">
-                            <button type="submit" class="Semi" value="Semi-Automatic">Semi-Automatic</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+    <box class="Buyer">
+        <img src="/Assets/Account circle 1.png" class="Buyerimg">
+        <h4 class="Buyertxt" action="register">Buyer</h4>
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <a href="/resellsignup"> <button class="btn btn-primary" type="submit"> Sign Up</button></a>
+            <a href="/resellogin"><button class="btn btn-primary" type="submit" style="  color: #FFFFFFFF;
+                background: #9095A1FF;">Login</button></a>
         </div>
-        <div class="dropdown-header">
-            <div class="mb-3">
-                <div class="Variant">
-                    <input type="text" name="Model" placeholder="Search Make, Model and Variant" class="form-control"
-                        id="exampleInputPassword1">
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="min">
-                    <input type="text" name="minPrice" placeholder="Min Price" class="form-control"
-                        id="exampleInputPassword1">
-                </div>
-            </div>
-            <div class="max">
-                <input type="text" name="minPrice" placeholder="Max Price" class="form-control"
-                    id="exampleInputPassword1">
-            </div>
-            <div class="model">
-                <input type="text" name="model" placeholder="Make & Model" class="form-control"
-                    id="exampleInputPassword1">
-            </div>
-        </div>
-        <div class="searchFire">
-            <button style="background: #B61E10FF; border: 0;">Search</button>
-        </div>
-    </div>
-    </form>
+    </box>
     <br>
-    <div class="link">
-    </div>
-    </div>
-    </div>
-    <div class="new">
-        <h1>New & Used Handguns For Sale</h1>
-    </div>
-    <div class="handgun-home">
-        <h6>Home</h6>
-    </div>
-    <div class="box2">
-        <div>
-            <div class="year1">
-                <h6>Year</h6>
-            </div>
-            <div class="min2">
-                <input type="text" name="min" placeholder="Min" class="form-control" id="exampleInputPassword1">
-            </div>
+    <br>
+    <box class="Seller">
+        <img src="/Assets/Store 1.png" class="Buyerimg">
+        <h4 class="Sellertxt">Seller</h4>
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <a href="/resellsignup"> <button class="btn btn-primary" type="submit"> Sign Up</button></a>
+            <a href="/resellogin"><button class="btn btn-primary" type="submit" style="  color: #FFFFFFFF;
+                background: #9095A1FF;">Login</button></a>
         </div>
-        <div class="max2">
-            <input type="text" name="max" placeholder="Max" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="new-firearms">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    Featured Firearms
-                </label>
-            </div>
-        </div>
-        <div class="used-firearms">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    Used Firearms
-                </label>
-            </div>
-        </div>
-        <div class="brand">
-            <input type="text" name="brand" placeholder="Brand" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="type">
-            <input type="text" name="Handgun Type" placeholder="Handgun Type" class="form-control"
-                id="exampleInputPassword1">
-        </div>
-        <div class="colours">
-            <input type="text" name="Colours" placeholder="Colours" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="seller">
-            <input type="text" name="Seller Type" placeholder="Seller Type" class="form-control"
-                id="exampleInputPassword1">
-        </div>
-    </div>
-    <div class="feature">
-        <h3> FEATURE LISTINGS</h3>
-    </div>
-    <div class="premium">
-        <h3> PREMIUM LISTING</h3>
-    </div>
-    <div class="box3">
-        <div>
-
-        </div>
-    </div>
+    </box>
     <footer>
         <div class="container text-center">
             <div class="row align-items-center">
@@ -261,9 +158,9 @@
             </div>
         </div>
     </footer>
-    <!-- <form action="/" method="post">
-</form> -->
-</body>
+    </footer>
+
+
 </body>
 
 </html>
