--- a/Views/semi.ejs
+++ b/Views/semi.ejs
@@ -29,7 +29,7 @@
                                 <a class="nav-link" href="/buy">Buy a Firearm</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sell a Firearm</a>
+                                <a class="nav-link" href="/sell">Sell a Firearm</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link " href="#">Value my Firearm</a>
