--- a/public/stylesheets/buyandsell.css
+++ b/public/stylesheets/buyandsell.css
@@ -1,20 +1,36 @@
 body {
-    background-image: url("/Assets/Image 20 (2).png");
+    background-image: url("/Assets/Image 20 (3).png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 1100px;
+    height: 1400px;
     /* neutral-800 */
     border-radius: 0px;
 }
 
-.box {
+/* .nav_bar {
     position: relative;
-    top: 225px;
+    max-width: 110%;
+    height: 48px;
+    background: #1E2128FF;
+
+} */
+
+.center {
+    position: relative;
+}
+
+.link {
+    text-align: center;
+}
+
+.box {
+    position: absolute;
+    top: 300px;
     left: 35%;
     width: 538px;
-    height: 459px;
+    height: 591px;
     background: #FFFFFFFF;
     /* white */
     border-radius: 4px;
@@ -25,9 +41,19 @@ body {
 
 }
 
+.check-form {
+    top: 329px;
+    left: 64px;
+    /* Heading */
+    font-size: 14px;
+    line-height: 22px;
+    color: #171A1FFF;
+    /* neutral-900 */
+}
+
 .line_left {
     position: absolute;
-    top: 338px;
+    top: 488px;
     left: 28px;
     width: 219px;
     height: 0px;
@@ -38,9 +64,28 @@ body {
     transform: rotate(0deg);
 }
 
+.button-loc {
+    position: absolute;
+    top: 371px;
+    left: 28px;
+    width: 482px;
+    height: 44px;
+}
+
+.account {
+    position: absolute;
+    top: 435px;
+    left: 156px;
+    /* Heading */
+    font-size: 14px;
+    line-height: 22px;
+    color: #171A1FFF;
+    /* neutral-900 */
+}
+
 .or {
     position: absolute;
-    top: 327px;
+    top: 477px;
     left: 259px;
     font-family: Open Sans;
     /* Body */
@@ -52,7 +97,7 @@ body {
 
 .line_right {
     position: absolute;
-    top: 338px;
+    top: 488px;
     left: 291px;
     width: 219px;
     height: 0px;
@@ -65,7 +110,7 @@ body {
 
 .Google {
     position: absolute;
-    top: 369px;
+    top: 519px;
     left: 181px;
     width: 48px;
     height: 48px;
@@ -110,7 +155,7 @@ body {
 
 .facebook {
     position: absolute;
-    top: 369px;
+    top: 519px;
     left: 245px;
     width: 48px;
     height: 48px;
@@ -155,7 +200,7 @@ body {
 
 .Apple {
     position: absolute;
-    top: 369px;
+    top: 519px;
     left: 309px;
     width: 48px;
     height: 48px;
@@ -201,11 +246,6 @@ body {
     opacity: 0.4;
 }
 
-.form_Link {
-    color: black;
-    text-align: center;
-}
-
 .heading {
     text-align: center;
 }
@@ -221,12 +261,6 @@ li a:hover {
 .text-size {
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
-}
-
-@media (max-width: 600px) {
-    body {
-        color: blue;
-    }
 }
 
 a:link {
@@ -254,10 +288,10 @@ a:active {
 }
 
 footer {
-    position: relative;
-    top: 500px;
+    position: absolute;
+    top: 1250px;
     left: 0px;
-    max-width: 110%;
+    width: 110%;
     height: 486px;
     background: #DEE1E6FF;
     /* neutral-300 */
@@ -268,7 +302,7 @@ footer {
     text-align: left;
     margin-top: 96px;
     left: 153px;
-    width: 138px;
+    max-width: 138px;
     height: 68px;
     font-weight: bold;
     font-family: Montserrat;
@@ -308,7 +342,104 @@ footer {
     left: 1123px;
 }
 
-.footer-text {
+.Buyer {
+    position: absolute;
+    top: 450px;
+    left: 450px;
+    width: 369px;
+    height: 369px;
+    text-align: center;
+    line-height: 150px;
+    background: #FFFFFFFF;
+    /* white */
+    border-radius: 4px;
+    /* border-m */
+}
+
+.Buyertxt {
+    /* position: absolute; */
+    top: 451px;
+    left: 450px;
+    /* font-family: Montserrat; */
+    /* Heading */
+    font-size: 32px;
+    line-height: 75px;
+    color: #171A1FFF;
+    /* neutral-900 */
+    text-align: center;
+}
+
+.Seller {
+    position: absolute;
+    top: 450px;
+    left: 850px;
+    width: 369px;
+    height: 369px;
+    line-height: 150px;
+    text-align: center;
+    background: #FFFFFFFF;
+    /* white */
+    border-radius: 4px;
+    /* border-m */
+}
+
+.Sellertxt {
+    /* position: absolute; */
+    top: 451px;
+    left: 450px;
+    /* font-family: Montserrat; */
+    /* Heading */
+    font-size: 32px;
+    line-height: 75px;
+    color: #171A1FFF;
+    /* neutral-900 */
+}
+
+.btn-primary {
+    /* position: absolute; */
+    top: 513px;
+    left: 356px;
+    width: 200px;
+    height: 44px;
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* Body */
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFFFF;
+    /* white */
+    background: #262020FF;
+    /* primary-500 */
+    opacity: 1;
+    border: none;
+    border-radius: 4px;
+    /* border-m */
+}
+
+/* Hover */
+.btn-primary:hover {
+    color: #FFFFFFFF;
+    /* white */
+    background: #443939FF;
+    /* primary-450 */
+}
+
+/* Pressed */
+.btn-primary:hover:active {
+    color: #FFFFFFFF;
+    /* white */
+    background: #615151FF;
+    /* primary-400 */
+}
+
+/* Disabled */
+.btn-primary:disabled {
+    opacity: 0.4;
+}
+
+.btn-primary-text {
     text-align: left;
     font-family: Open Sans;
     /* Body */
