--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -19,6 +19,12 @@ body {
 
 }
 
+@media (max-width: 600px) {
+    body {
+        color: blue;
+    }
+}
+
 .header_img {
     top: 47px;
     max-width: 100%;
@@ -36,6 +42,18 @@ body {
     background: #DEE1E6FF;
     box-shadow: 0px 4px 9px #171a1f, 0px 0px 2px #171a1f;
     margin: 0px;
+}
+
+.handgun-home {
+    position: absolute;
+    top: 580px;
+    left: 25%;
+    font-family: Open Sans;
+    /* Body */
+    font-size: 14px;
+    line-height: 22px;
+    color: #171A1FFF;
+    /* neutral-900 */
 }
 
 .Variant {
@@ -142,8 +160,8 @@ body {
     background: #B61E10FF;
     /* secondary-500 */
     /* opacity: 1;
-    border: none;
-    border-radius: 4px; */
+border: none;
+border-radius: 4px; */
     /* border-m */
     box-shadow: 0px 2px 5px #171a1f, 0px 0px 2px #171a1f;
     /* shadow-s */
@@ -174,8 +192,8 @@ body {
 }
 
 .buySell {
+    height: 100px;
     text-align: center;
-    margin: 50px;
 }
 
 
@@ -205,10 +223,9 @@ body {
 }
 
 .Trusted {
-    left: 160px;
-    width: 100%;
-    height: 196px;
-    align-items: center;
+    max-width: 110%;
+    text-align: center;
+
 }
 
 li a:hover {
@@ -228,7 +245,7 @@ li a:hover {
 }
 
 a:link {
-    color: black;
+    color: white;
     background-color: transparent;
     text-decoration: none;
 }
@@ -254,8 +271,8 @@ a:active {
 footer {
     top: 1993px;
     left: 0px;
-    width: 100%;
-    height: 365px;
+    max-width: 110%;
+    height: 486px;
     background: #DEE1E6FF;
     /* neutral-300 */
     border-radius: 0px;
