--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -1,12 +1,21 @@
 body {
     background-image: url("/Assets/Image 20 (3).png");
-    top: 48px;
-    left: 0px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
-    height: 858px;
+    height: 1400px;
     /* neutral-800 */
     border-radius: 0px;
 }
+
+/* .nav_bar {
+    position: relative;
+    max-width: 110%;
+    height: 48px;
+    background: #1E2128FF;
+
+} */
 
 .center {
     position: relative;
@@ -282,8 +291,8 @@ footer {
     position: absolute;
     top: 1250px;
     left: 0px;
-    width: 100%;
-    height: 365px;
+    width: 110%;
+    height: 486px;
     background: #DEE1E6FF;
     /* neutral-300 */
     border-radius: 0px;
@@ -293,7 +302,7 @@ footer {
     text-align: left;
     margin-top: 96px;
     left: 153px;
-    width: 138px;
+    max-width: 138px;
     height: 68px;
     font-weight: bold;
     font-family: Montserrat;
