--- a/Views/buy.ejs
+++ b/Views/buy.ejs
@@ -41,7 +41,7 @@
                                 <a class="nav-link " href="/userProf">User Profile</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/register"><button type="button" class="btn btn-danger" href="/login">Login or
+                                <a href="/buysell"><button type="button" class="btn btn-danger" href="/buysell">Login or
                                         Sign
                                         up</button></a>
                             </li>
@@ -165,7 +165,13 @@
     </div>
     <div class="feature">
         <h3> FEATURE LISTINGS</h3>
+        <div class="col my-3">
+            <div class="card" style="width: 10rem; ">
+                <img src="/files/download.jpg" alt="Image" content_Type="multipart/form-data">
+            </div>
+        </div>
     </div>
+
     <div class="premium">
         <h3> PREMIUM LISTING</h3>
     </div>
@@ -263,7 +269,6 @@
     </footer>
     <!-- <form action="/" method="post">
 </form> -->
-</body>
 </body>
 
 </html>
