--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -102,8 +102,9 @@
                                 id="exampleInputPassword1">
                         </div>
                     </div>
-                    <div class="searchFire">
-                        <button type="button">Search 5000 Firearms</button>
+                    <div class="d-grid gap-2">
+                        <button class="btn btn-primary" type="button"
+                            style="background: #B61E10FF; border:  #B61E10FF;">Search 5000 Firearms</button>
                     </div>
                 </div>
                 </form>
