--- a/Views/resellogin.ejs
+++ b/Views/resellogin.ejs
@@ -40,7 +40,7 @@
                             <a class="nav-link " href="/userProf">User Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/register"><button type="button" class="btn btn-danger" href="/login">Login or
+                            <a href="/buysell"><button type="button" class="btn btn-danger" href="/login">Login or
                                     Sign
                                     up</button></a>
                         </li>
@@ -77,7 +77,7 @@
             <img src="/Assets/Divider 6.png" alt="">
         </div>
         <div class="Google">
-            <button type="button"><a href="#"></a></button>
+            <button type="button"><a href=""></a></button>
         </div>
         <div class="facebook">
             <button type="button"><a href="#"></a></button>
