--- a/Views/Login.ejs
+++ b/Views/Login.ejs
@@ -40,7 +40,7 @@
                             <a class="nav-link " href="/userProf">User Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/register"><button type="button" class="btn btn-danger" href="/login">Login or
+                            <a href="/buysell"><button type="button" class="btn btn-danger" href="/login">Login or
                                     Sign
                                     up</button></a>
                         </li>
