--- a/Views/sell.ejs
+++ b/Views/sell.ejs
@@ -14,10 +14,6 @@
     <link rel="stylesheet" href="/stylesheets/sell.css">
 </head>
 
-<script>
-
-</script>
-
 <body>
 
     <div class="nav_bar">
@@ -45,7 +41,7 @@
                                 <a class="nav-link " href="/userProf">User Profile</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/register"><button type="button" class="btn btn-danger" href="/login">Login or
+                                <a href="/buysell"><button type="button" class="btn btn-danger" href="/login">Login or
                                         Sign
                                         up</button></a>
                             </li>
@@ -55,148 +51,170 @@
             </div>
         </header>
     </div>
-    <% if(typeof alert !='undefined' ){%>
-        <% alert.forEach(function(error){%>
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <%= error.msg %>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    <span aria-hidden="true">&times;</span>
+    <div class="box">
+        <div class="heading">
+            <h2>Account Details</h2>
+        </div>
+        <br>
+        <form id="myForm" method="POST" enctype="multipart/form-data" action="/sell">
+            <div class="row">
+                <div class="mb-3">
+                    <label for="image" class="form-label">Upload Firearm Reseller Licence</label>
+                    <input class="form-control" type="file" name="image" id="myFiles" accept="image/*" multiple />
+                </div>
+                <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Upload a Copy of Your ID</label>
+                    <input class="form-control" type="file" name="image" id="myFiles" accept="image/*" multiple />
+                </div>
+                <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Add Company Logo</label>
+                    <input class="form-control" type="file" name="image" id="myFiles" accept="image/*" multiple />
+                </div>
+                <div class="form-group">
+                    <label for="email">Contact Number</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" name="email"
+                        aria-describedby="emailHelp" placeholder="name@domain.com" style="background-image: none;">
+                </div>
             </div>
-            <% }) %>
-                <% } %>
-                    <div class="box">
-                        <div class="heading">
-                            <h2>Account Details</h2>
+            <div class=" form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" name="email"
+                    aria-describedby="emailHelp" placeholder="name@domain.com" style="background-image: none;">
+            </div>
+            <!-- <div class=" form-group">
+                <label for="password">Whatsapp(Optional)</label>
+                <input type="password" class="form-control" name="password" id="exampleInputPassword1"
+                    placeholder="Number" style="background-image: none;">
+            </div> -->
+            <br>
+            <h2></h2>
+            <h3></h3>
+            <div class=" button-loc">
+                <button class="btn btn-primary" type="submit" style="background-color: black;">Sign
+                    Up</button>
+        </form>
+        </form>
+        <footer>
+            <div class="container text-center">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="footer-logo">
+                            Logo
                         </div>
-                        <br>
-                        <form id="myForm" action="/register" method="post">
-                            <div class="row">
-                                <div class="mb-3">
-                                    <label for="formFile" class="form-label">Upload Firearm Reseller Licence</label>
-                                    <input class="form-control" type="file" id="formFile">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="formFileMultiple" class="form-label">Upload a Copy of Your ID</label>
-                                    <input class="form-control" type="file" id="formFileMultiple" multiple>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="formFileMultiple" class="form-label">Add Company Logo</label>
-                                    <input class="form-control" type="file" id="formFileMultiple" multiple>
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Contact Number</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" name="email"
-                                        aria-describedby="emailHelp" placeholder="name@domain.com"
-                                        style="background-image: none;">
-                                </div>
-                            </div>
-                            <div class=" form-group">
-                                <label for="email">Email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" name="email"
-                                    aria-describedby="emailHelp" placeholder="name@domain.com"
-                                    style="background-image: none;">
-                            </div>
-                            <div class=" form-group">
-                                <label for="password">Whatsapp(Optional)</label>
-                                <input type="password" class="form-control" name="password" id="exampleInputPassword1"
-                                    placeholder="Number" style="background-image: none;">
-                            </div>
+                    </div>
+                    <div class="col">
+                        <div class="footer-Prod">
+                            <h6>Product</h6>
+                        </div>
+                        <div class="footer-text">
+                            <a href="#" style="color: black;">Features</a>
                             <br>
-                            <div class="button-loc">
-                                <div class="d-grid gap-2">
-                                    <button class="btn btn-primary" type="submit" style="background-color: black;">Sign
-                                        Up</button>
-                                </div>
-                            </div>
-                            <footer>
-                                <div class="container text-center">
-                                    <div class="row align-items-center">
-                                        <div class="col">
-                                            <div class="footer-logo">
-                                                Logo
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="footer-Prod">
-                                                <h6>Product</h6>
-                                            </div>
-                                            <div class="footer-text">
-                                                <a href="#" style="color: black;">Features</a>
-                                                <br>
-                                                <a href="#" style="color: black;">Pricing</a>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="footer-Res">
-                                                <h6>Recourses</h6>
-                                            </div>
-                                            <div class="footer-text">
-                                                <a href="#" style="color: black;">Blog</a>
-                                                <br>
-                                                <a href="#" style="color: black;">User Guides</a>
-                                                <br>
-                                                <a href="#" style="color: black;">Webinars</a>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="footer-Com">
-                                                <h6>Community</h6>
-                                            </div>
-                                            <div class="footer-text">
-                                                <a href="#" style="color: black;">Developers</a>
-                                                <br>
-                                                <a href="#" style="color: black;">Users</a>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="footer-Comp">
-                                                <h6>Company</h6>
-                                            </div>
-                                            <div class="footer-text">
-                                                <a href="#" style="color: black;">About</a>
-                                                <br>
-                                                <a href="#" style="color: black;">Join Us</a>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <div class="footer-Sup">
-                                                <h6>Support</h6>
-                                            </div>
-                                            <div class="footer-text">
-                                                <a href="#" style="color: black;">Help center</a>
-                                                <br>
-                                                <a href="#" style="color: black;">Chat Support</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="container text-center">
-                                    <div class="row align-items-end">
-                                        <div class="col">
-                                            <button class="btn btn-secondary btn-sm dropdown-toggle" type="button"
-                                                data-bs-toggle="dropdown" aria-expanded="false"
-                                                style="float:left; margin-top: 55px; background-color: white; color: black;">
-                                                English
-                                            </button>
-                                            <ul class="dropdown-menu">
-                                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col">
-                                            <div class="text-size">
-                                                <div class="terms">2022 Brand,Inc,Privacy-Terms-Sitemap</div>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            One of three columns
-                                        </div>
-                                    </div>
-                                </div>
-                            </footer>
-                            </footer>
+                            <a href="#" style="color: black;">Pricing</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="footer-Res">
+                            <h6>Recourses</h6>
+                        </div>
+                        <div class="footer-text">
+                            <a href="#" style="color: black;">Blog</a>
+                            <br>
+                            <a href="#" style="color: black;">User Guides</a>
+                            <br>
+                            <a href="#" style="color: black;">Webinars</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="footer-Com">
+                            <h6>Community</h6>
+                        </div>
+                        <div class="footer-text">
+                            <a href="#" style="color: black;">Developers</a>
+                            <br>
+                            <a href="#" style="color: black;">Users</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="footer-Comp">
+                            <h6>Company</h6>
+                        </div>
+                        <div class="footer-text">
+                            <a href="#" style="color: black;">About</a>
+                            <br>
+                            <a href="#" style="color: black;">Join Us</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="footer-Sup">
+                            <h6>Support</h6>
+                        </div>
+                        <div class="footer-text">
+                            <a href="#" style="color: black;">Help center</a>
+                            <br>
+                            <a href="#" style="color: black;">Chat Support</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container text-center">
+                <div class="row align-items-end">
+                    <div class="col">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false"
+                            style="float:left; margin-top: 55px; background-color: white; color: black;">
+                            English
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <div class="text-size">
+                            <div class="terms">2022 Brand,Inc,Privacy-Terms-Sitemap</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        One of three columns
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <script>
+            // const form = document.getElementById('myForm')
 
+            // const sendFiles = async () => {
+            //     // Object
+            //     const myFiles = document.getElementById('myFiles').files
+
+            //     const formData = new FormData()
+
+            //     Object.keys(myFiles).forEach(key => {
+            //         formData.append(myFiles.item(key).name, myFiles.item(key))
+            //     })
+
+            // const response = await fetch('http://localhost:8080/upload', {
+            //     method: 'POST',
+            //     body: formData
+            // })
+
+            //     const json = await response.json()
+
+            //     const h2 = document.querySelector('h2')
+            //     h2.textContent = `Status: ${json?.status}`
+
+            //     const h3 = document.querySelector('h3')
+            //     h3.textContent = json?.message
+
+            //     console.log(json)
+            // }
+
+            // form.addEventListener('submit', (e) => {
+            //     e.preventDefault()
+            //     sendFiles()
+            // })
+        </script>
 
 </body>
 
