--- a/public/stylesheets/buyandsell.css
+++ b/public/stylesheets/buyandsell.css
@@ -1,17 +1,16 @@
 body {
     background-image: url("/Assets/Image 20 (3).png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 1400px;
+    top: 48px;
+    left: 0px;
+    /* width: 100%; */
+    height: 858px;
     /* neutral-800 */
     border-radius: 0px;
 }
 
 /* .nav_bar {
-    position: relative;
-    max-width: 110%;
+    position: absolute;
+    width: 110%;
     height: 48px;
     background: #1E2128FF;
 
@@ -302,7 +301,7 @@ footer {
     text-align: left;
     margin-top: 96px;
     left: 153px;
-    max-width: 138px;
+    width: 138px;
     height: 68px;
     font-weight: bold;
     font-family: Montserrat;
@@ -342,10 +341,20 @@ footer {
     left: 1123px;
 }
 
+.footer-text {
+    text-align: left;
+    font-family: Open Sans;
+    /* Body */
+    font-size: 16px;
+    line-height: 26px;
+    color: #171A1FFF;
+    /* neutral-900 */
+}
+
 .Buyer {
     position: absolute;
     top: 450px;
-    left: 450px;
+    left: 400px;
     width: 369px;
     height: 369px;
     text-align: center;
@@ -372,7 +381,7 @@ footer {
 .Seller {
     position: absolute;
     top: 450px;
-    left: 850px;
+    left: 800px;
     width: 369px;
     height: 369px;
     line-height: 150px;
@@ -447,4 +456,99 @@ footer {
     line-height: 26px;
     color: #171A1FFF;
     /* neutral-900 */
+}
+
+@media screen and (max-width: 576px) {
+    /* body {
+        width: 768px;
+    } */
+
+    .Buyer {
+        left: 0px;
+    }
+
+    .Seller {
+        left: 325px;
+    }
+
+    footer {
+        width: 1150px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    /* body {
+        width: 992px;
+    } */
+
+    .Buyer {
+        left: 15px;
+    }
+
+    .Seller {
+        left: 400px;
+    }
+
+    footer {
+        width: 1150px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    /* body {
+        width: 1400px;
+    } */
+
+    .Buyer {
+        left: 175px;
+    }
+
+    .Seller {
+        left: 575px;
+    }
+
+    footer {
+        width: 1150px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    body {
+        width: 1100px;
+    }
+
+    .Buyer {
+        left: 175px;
+    }
+
+    .Seller {
+        left: 575px;
+    }
+
+    footer {
+        width: 1150px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    body {
+        width: 1200px;
+    }
+
+    .nav_bar {
+        width: 1300px;
+    }
+
+
+    .Buyer {
+        left: 175px;
+    }
+
+    .Seller {
+        left: 575px;
+    }
+
+    footer {
+        width: 1150px;
+    }
 }
