--- a/public/stylesheets/sell.css
+++ b/public/stylesheets/sell.css
@@ -1,19 +1,18 @@
 body {
     background-image: url("/Assets/Image 20 (3).png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    top: 48px;
+    left: 0px;
     width: 100%;
-    height: 1400px;
+    height: 858px;
     /* neutral-800 */
     border-radius: 0px;
 }
 
 /* .nav_bar {
-    position: relative;
-    max-width: 110%;
-    height: 48px;
-    background: #1E2128FF;
+position: relative;
+max-width: 110%;
+height: 48px;
+background: #1E2128FF;
 
 } */
 
@@ -203,7 +202,7 @@ body {
 }
 
 .form-control {
-    background-image: url("/Assets/Button 37.png");
+    background-image: url("./Assets/Button 37.png");
     background-repeat: no-repeat;
     background-position: 100%;
     height: 36px;
@@ -256,10 +255,10 @@ a:active {
 
 footer {
     position: absolute;
-    top: 902px;
-    left: 0px;
-    width: 1440px;
-    height: 365px;
+    top: 1100px;
+    left: -600px;
+    width: 1660px;
+    height: 486px;
     background: #DEE1E6FF;
     /* neutral-300 */
     border-radius: 0px;
@@ -269,7 +268,7 @@ footer {
     text-align: left;
     margin-top: 96px;
     left: 153px;
-    max-width: 138px;
+    width: 138px;
     height: 68px;
     font-weight: bold;
     font-family: Montserrat;
@@ -342,4 +341,46 @@ input[type=file]:after {
     -webkit-appearance: button;
     padding: 3px 8px 2px;
     border: 0px;
+}
+
+@media screen and (-width: 576px) {
+    .box {
+        left: 350px;
+    }
+
+    footer {
+        width: 1100px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    footer {
+        width: 1150px;
+
+    }
+}
+
+@media screen and (max-width: 992px) {
+    body {
+        width: 1200px;
+    }
+
+    footer {
+        width: 1440px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .box {
+        left: 310px;
+    }
+
+    body {
+        width: 1100px;
+    }
+
+    footer {
+        width: 1440px;
+    }
 }
