--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -21,11 +21,11 @@
     <div class="nav_bar">
         <header class="d-flex align-items-center py-3 bg-light header">
             <div class="container">
-                <nav class="navbar-expand-lg " action="/home" method="post">
+                <nav class="navbar-expand-lg " action="/" method="post">
                     <div id="navbarNav">
                         <ul class="nav justify-content-center">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/home">Logo</a>
+                                <a class="nav-link active" aria-current="page" href="/">Logo</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/buy">Buy a Firearm</a>
@@ -124,7 +124,8 @@
                             odio
                             exercitationem quod</p>
                     </div>
-                    <div class="col"><img src="\Assets\Icon button 2.png" class="img-thumbnail" alt="..." style="border: none;" >
+                    <div class="col"><img src="\Assets\Icon button 2.png" class="img-thumbnail" alt="..."
+                            style="border: none;">
                         <br>
                         <h6>Sell Your Firearms</h6>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit velit nemo mollitia
@@ -132,7 +133,8 @@
                             odio
                             exercitationem quod</p>
                     </div>
-                    <div class="col"><img src="\Assets\Icon button 3.png" class="img-thumbnail" alt="..." style="border: none;">
+                    <div class="col"><img src="\Assets\Icon button 3.png" class="img-thumbnail" alt="..."
+                            style="border: none;">
                         <br>
                         <h6>Firearm Valuation</h6>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit velit nemo mollitia
@@ -140,7 +142,8 @@
                             odio
                             exercitationem quod</p>
                     </div>
-                    <div class="col"><img src="\Assets\Icon button 4.png" class="img-thumbnail" alt="..." style="border: none;"><br>
+                    <div class="col"><img src="\Assets\Icon button 4.png" class="img-thumbnail" alt="..."
+                            style="border: none;"><br>
                         <h6>Background Checks</h6>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit velit nemo mollitia
                             accusamus
