--- a/Views/buy.ejs
+++ b/Views/buy.ejs
@@ -23,7 +23,7 @@
                     <div id="navbarNav">
                         <ul class="nav justify-content-center">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/home">Logo</a>
+                                <a class="nav-link active" aria-current="page" href="/">Logo</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/buy">Buy a Firearm</a>
