--- a/Views/buysell.ejs
+++ b/Views/buysell.ejs
@@ -18,11 +18,11 @@
     <div class="nav_bar" action="/buysell">
         <header class="d-flex align-items-center py-3 bg-light header">
             <div class="container">
-                <nav class="navbar-expand-lg " action="/home" method="post">
+                <nav class="navbar-expand-lg " action="/" method="post">
                     <div id="navbarNav">
                         <ul class="nav justify-content-center">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/home">Logo</a>
+                                <a class="nav-link active" aria-current="page" href="/">Logo</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/buy">Buy a Firearm</a>
