--- a/public/stylesheets/buyandsell.css
+++ b/public/stylesheets/buyandsell.css
@@ -2,7 +2,7 @@ body {
     background-image: url("/Assets/Image 20 (3).png");
     top: 48px;
     left: 0px;
-    /* width: 100%; */
+    width: 110%;
     height: 858px;
     /* neutral-800 */
     border-radius: 0px;
@@ -354,7 +354,7 @@ footer {
 .Buyer {
     position: absolute;
     top: 450px;
-    left: 400px;
+    left: 320px;
     width: 369px;
     height: 369px;
     text-align: center;
@@ -381,7 +381,7 @@ footer {
 .Seller {
     position: absolute;
     top: 450px;
-    left: 800px;
+    left: 720px;
     width: 369px;
     height: 369px;
     line-height: 150px;
@@ -469,83 +469,6 @@ footer {
 
     .Seller {
         left: 325px;
-    }
-
-    footer {
-        width: 1150px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    /* body {
-        width: 992px;
-    } */
-
-    .Buyer {
-        left: 15px;
-    }
-
-    .Seller {
-        left: 400px;
-    }
-
-    footer {
-        width: 1150px;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    /* body {
-        width: 1400px;
-    } */
-
-    .Buyer {
-        left: 175px;
-    }
-
-    .Seller {
-        left: 575px;
-    }
-
-    footer {
-        width: 1150px;
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    body {
-        width: 1100px;
-    }
-
-    .Buyer {
-        left: 175px;
-    }
-
-    .Seller {
-        left: 575px;
-    }
-
-    footer {
-        width: 1150px;
-    }
-}
-
-@media screen and (max-width: 1400px) {
-    body {
-        width: 1200px;
-    }
-
-    .nav_bar {
-        width: 1300px;
-    }
-
-
-    .Buyer {
-        left: 175px;
-    }
-
-    .Seller {
-        left: 575px;
     }
 
     footer {
