--- a/public/stylesheets/sell.css
+++ b/public/stylesheets/sell.css
@@ -202,7 +202,7 @@ background: #1E2128FF;
 }
 
 .form-control {
-    background-image: url("./Assets/Button 37.png");
+    background-image: url("/Assets/Button 37.png");
     background-repeat: no-repeat;
     background-position: 100%;
     height: 36px;
